# python-library-template

./: README.md  google-scholar.txt  pyproject.toml
.github/workflows/: publish-to-pypi.yml
sample_kgforge/: __init__.py  pdftokg.py
tests/: test_pdftokg.py
